# YouTube_Social_Media_Anlytics_Project

./: README.md  app.py  main.py  pyproject.toml
data/raw/: youtube_data.csv
research/: cleaned_youtube_data.csv  model.ipynb
