[project]
name = "youtube-social-media-anlytics-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "counter>=1.0.0",
    "dvc>=3.66.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "pydentic>=0.0.1.dev3",
    "pymongo>=4.16.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
    "textblob>=0.19.0",
]
